feat: смена квартиры пользователю по коду сгенерированносу УК
